# openfable

./: .gitignore  CONTRIBUTING.md  Dockerfile  Dockerfile.dev  LICENSE  README.md  docker-compose.dev.yml  docker-compose.test.yml  docker-compose.yml  pyproject.toml
.github/workflows/: publish.yml  test.yml
alembic/: env.py
alembic/versions/: 0001_initial_schema.py  0002_add_content_column.py  0003_add_chunk_offsets.py
demo/: Dockerfile.recorder  demo.cast  docker-compose.demo.yml  mcp_demo.py
e2e/: conftest.py  test_mcp_server.py  test_multi_document_query.py
src/openfable/: config.py  db.py  exceptions.py  main.py
src/openfable/models/: __init__.py  chunk.py  document.py  node.py
src/openfable/repositories/: chunk_repo.py  document_repo.py  node_repo.py
src/openfable/routers/: documents.py  health.py  retrieval.py
src/openfable/schemas/: chunking.py  document.py  health.py  retrieval.py  tree.py
src/openfable/services/: embedding_service.py  llm_service.py  retrieval_service.py
src/openfable/services/ingestion/: chunking.py  pipeline.py  tree_builder.py
tests/: conftest.py
tests/integration/: conftest.py  fixtures.py  test_api.py  test_pipeline.py  test_retrieval.py
tests/unit/: test_config_wiring.py
tests/unit/schemas/: test_retrieval_schemas.py
tests/unit/services/: test_chunking.py  test_embedding_pipeline.py  test_node_fusion.py  test_retrieval_service.py  test_tree_builder.py
