[project]
name = "openfable"
version = "0.1.0"
description = "FABLE retrieval engine - structured, hierarchy-aware RAG"
authors = [
    { name = "Alain Brown", email = "alain.brown@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.4",
    "fastapi[standard]>=0.135.3",
    "fastmcp>=2.2.0",
    "httpx>=0.28.1",
    "instructor>=1.15.1",
    "litellm>=1.83.1",
    "pgvector>=0.4.2",
    "psycopg2-binary>=2.9.11",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "sqlalchemy>=2.0.49",
    "uvicorn[standard]>=0.43.0",
]

[build-system]
requires = ["uv_build>=0.11.3,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "anyio>=4.0",
    "mypy>=1.20.0",
    "pytest>=8.0",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.15.9",
    "testcontainers>=4.14.2",
]
e2e = [
    "httpx>=0.28.1",
    "langchain-openai>=0.3.0",
    "mcp-use>=0.2.0",
    "psycopg2-binary>=2.9.11",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: marks tests as integration tests (require Docker, deselect with '-m not integration')",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.mypy]
python_version = "3.12"
plugins = ["pydantic.mypy"]
strict = true
